tests/neg/i25248.scala
val y = new c(for baz <- if baz // x then y else new A { // error
  val z = w } do 27) 42 // error
